--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -8,4 +8,4 @@ always_rebuild=true
 elixir_version=1.2.0
 
 # A command to run right before compiling the app (after elixir, .etc)
-pre_compile="mix deps.get() && npm install"
+pre_compile="MIX_ENV=prod mix deps.get && npm install"
