--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -5,7 +5,10 @@
 always_rebuild=true
 
 # Specifying Elixir Version
-elixir_version=1.2.0
+# elixir_version=1.2.0
 
 # A command to run right before compiling the app (after elixir, .etc)
-pre_compile="MIX_ENV=prod mix deps.get && npm install"
+# pre_compile="MIX_ENV=prod mix deps.get && npm install"
+
+# A command to run right after.
+# post_compile="MIX_ENV=prod mix ecto.migrate"
